# resource_embed

./: CMakeLists.txt  README.md
include/: string_embed.hpp
include/resource_embed/: resource_embed.hpp
include/string_embed/: string_embed.hpp
src/: resource_embed.cpp  string_embed.cpp
